--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <h1>BIMM 143 Fall 2022<h1>
   <h1>Mady Welch<h1>
+Lab portfolio: 
+- Class 4: [Lab 4 .R](Class04/Class04.R)
+- Class 5: [Lab 5 .qmd](Class05/class05.qmd)
+- Class 6: [Lab 6 .qmd](Class06/Class06.qmd)
+- Class 7: [Lab 7 .qmd](Class07/Class07_Lab_Handout.qmd)
+- Class 8: 
+- Class 9: 
